# aapp_api_services

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  deploy.build-stage.yaml  deploy.main.yaml  deploy.pr.yaml  deploy.stage.yaml  deploy.yaml  docker-compose.yml  glossary.md  gunicorn.conf.py  manage.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  uwsgi.ini
.azuredevops/: pull_request_template.md
.bruno-workspace/: workspace.yml
.bruno-workspace/environments/: A.yml  Local.yml  O.yml  P.yml  T.yml
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: README.md  developer.agent.md  django-agent.md  handoff-schemas.md  orchestrator.agent.md  reviewer.agent.md  story-plan.agent.md  tester.agent.md
.github/workflows/: checks.yaml
ai_playbook/: design-review-checklist.md  environment.md  jira-story-template.md  solution-design-template.md
bridge/: enums.py  models.py  openapi-schema.yaml  urls.py  utils.py  views.py
bridge/boat_charging/: client.py  cpms-data-model-readme.md  exceptions.py  mobile-api-integration-guide.md  urls.py  utils.py
bridge/burning_guide/: urls.py  utils.py
bridge/constants/: waste_pass_constants.py
bridge/migrations/: 0001_initial.py
bridge/mijnamsterdam/: processor.py  urls.py  views.py
bridge/parking/: auth.py  authentication.py  config.py  enums.py  exceptions.py  ssp_client.py  urls.py  utils.py  views.py
bridge/proxy/: serializers.py  urls.py  views.py
bridge/serializers/: waste_pass_serializers.py
bridge/settings/: base.py  local.py  otap.py
bridge/sport/: urls.py
bridge/tests/: test_proxy_views.py  test_views.py  test_waste_pass_views.py
bridge/views/: proxy_views.py  waste_pass_views.py
bridge/waste_pass/: constants.py  serializers.py  urls.py  views.py
city_pass/: apps.py  authentication.py  exceptions.py  models.py  permissions.py  serializers.py  urls.py  utils.py
city_pass/admin/: __init__.py  budget_admin.py  notification_admin.py
city_pass/integration_tests/: test_notifications.py
city_pass/migrations/: 0001_initial.py  0002_refreshtoken_expires_at.py  0003_passdata.py  0004_alter_passdata_unique_together.py  0005_alter_passdata_pass_number.py  0006_budget_session_device_id_passdata_budgets_and_more.py  0007_alter_notification_title.py
city_pass/serializers/: data_serializers.py  error_serializers.py  session_serializers.py
city_pass/services/: notification.py
city_pass/settings/: base.py  local.py  otap.py
city_pass/tests/: base_test.py  mock_data.py  session_views_tests.py  test_authentication.py  test_data_views.py  test_models.py  test_not_required_serializer.py  test_serializers.py  test_session_views.py  test_utils.py
city_pass/views/: data_views.py  extend_schema.py  generics.py  session_views.py
construction_work/: apps.py  authentication.py  enums.py  exceptions.py  models.py  openapi-schema.yaml  pagination.py  permissions.py  serializers.py  urls.py  utils.py  validators.py
construction_work/etl/: extract_data.py  load_data.py  send_notifications.py  transform_data.py  update_data.py
construction_work/migrations/: 0001_initial.py  0008_remove_projectmanager_manager_key_and_more.py  0009_alter_projectmanager_email.py  0010_project_hidden.py  0011_image_image.py  0012_migrate_binary_to_image.py  0013_remove_image_data.py  0014_remove_image_coordinates_remove_image_mime_type.py  0015_alter_warningimage_warning.py  0015_remove_image_aspect_ratio_and_more.py  0016_warningmessage_notification_sent_delete_notification.py  0017_articleimage_projectimage_projectsection_and_more.py  0018_alter_image_image.py  0019_image_warning_image.py  0020_warningimage_image_set_id_alter_image_image.py  0021_articleimage_image_set_projectimage_image_set.py  0022_projectcontact_extra.py
construction_work/models/: article_models.py  manage_models.py  project_models.py
construction_work/serializers/: article_serializers.py  device_serializers.py  general_serializers.py  image_serializer.py  iprox_serializer.py  manage_serializers.py  project_serializers.py
construction_work/services/: geocoding.py  notification.py  push_notifications.py
construction_work/settings/: base.py  local.py  otap.py
construction_work/tests/: mock_data.py  test_article_views.py  test_authentication.py  test_device_views.py  test_project_views.py  tools.py
construction_work/utils/: auth_utils.py  bool_utils.py  date_utils.py  geo_utils.py  image_utils.py  model_utils.py  openapi_utils.py  patch_utils.py  test_utils.py  (+3 more)
contact/: README.md  admin.py  apps.py  exceptions.py  icons.py  models.py  permissions.py  urls.py
core/: apps.py  asgi.py  authentication.py  enums.py  exceptions.py  logging_formatters.py  pagination.py  permissions.py  routers.py  tests.py  urls.py  validators.py  wsgi.py
deploy/: docker-run-async.sh  docker-run.sh  init_notification_database.sql
image/: models.py  serializers.py  urls.py  views.py
main_application/: middleware.py  settings.py  settings_azure.py  settings_development.py  urls.py  wsgi.py
modules/: api_messages.py  apps.py  authentication.py  exceptions.py  icons.py  models.py  serializers.py  urls.py  utils.py  views.py
news/: models.py  urls.py
notification/: apps.py  crud.py  exceptions.py  firebase.py  loadtest-handoff.md  models.py  serializers.py  urls.py
requirements/: requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt
survey/: apps.py  models.py  named_tuples.py  urls.py  views.py
waste/: apps.py  constants.py  exceptions.py  interpret_frequencies.py  models.py  renderers.py  schema_hooks.py  urls.py
(+837 files in other folders)
