[project]
name = "aapp-api-services"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "django",
  "djangorestframework",
  "psycopg2-binary",
  "uWSGI",
  "drf_spectacular",
  "python-dotenv",
  "django-debug-toolbar",
  "django-redis",
  "dos2unix",
  # modules
  "djangorestframework-simplejwt",
  "django-csp",
  # image
  "pillow",
  "pillow-heif",
  # construction work ETL
  "aiohttp",
  "tenacity",
    # notifications
  "firebase_admin",
    # azure
  "django-storages[azure]",
  "azure-ad-verify-token",
  "azure-core",
  "azure-identity",
  "azure-monitor-opentelemetry",
  "azure-monitor-opentelemetry-exporter",
]

[tool.uv]
default-groups = []

[dependency-groups]
dev = [
  "freezegun",
  "pytest-django",
  "pytest-dotenv",
  "pytest-env",
  "model-bakery",
  "ruff",
  "aioresponses",
  "pytest-asyncio",
  "coverage",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.base"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
cache_dir = "/tmp/pytest_cache"

[tool.ruff]
cache-dir = "/tmp/.cache/ruff"

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, isort (`I`) rules
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["B904"]
# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"**/{settings}/*" = ["F403", "F405"]

[tool.coverage.run]
branch = true
omit = [
  "*/migrations/*",
  "*/settings/*"
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
