[project]
name = "aapp-api-services"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "django==5.1",
  "djangorestframework",
  "psycopg2-binary",
  "uWSGI",
  "drf_spectacular",
  "python-dotenv",
  "django-debug-toolbar",
  "django-redis",
  "dos2unix",
  "whitenoise",
  "pyproj==3.7.2",
  # modules
  "djangorestframework-simplejwt",
  "django-csp",
  "django-admin-sortable2",
  # image
  "pillow",
  "pillow-heif",
  # construction work ETL
  "aiohttp",
  "tenacity",
  # notifications
  "firebase_admin",
  # azure
  "django-storages[azure]",
  "azure-ad-verify-token",
  "azure-core",
  "azure-identity",
  "azure-monitor-opentelemetry",
  "azure-monitor-opentelemetry-exporter",
  # Integration and unit testing
  "freezegun",
  "pytest-django",
  "pytest-dotenv",
  "pytest-env",
  "model-bakery",
  "ruff",
  "aioresponses",
  "pytest-asyncio", # anyio pytest plugin?
  "coverage",
  "responses",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.base"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
cache_dir = "/tmp/pytest_cache"
markers = [
  "integration: integration tests that require the k8s cluster",
]
addopts = "-m 'not integration'"

[tool.ruff]
cache-dir = "/tmp/.cache/ruff"

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, isort (`I`) rules
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["B904"]
# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"**/{settings}/*" = ["F403", "F405"]

[tool.coverage.run]
branch = true
omit = [
  "*/migrations/*",
  "*/settings/*",
  "*/tests/*",
  "*/integration_tests/*",
  "*/urls.py",
  "*/admin.py",
  "*/admin/*",
  "*/apps.py",
]

[tool.coverage.report]
fail_under = 91
show_missing = true
skip_covered = true
